Use helpers in vespa-athenz instead of BouncyCastle